--- a/Vector_02/Vector_02.vcxproj.filters
+++ b/Vector_02/Vector_02.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lambda_01.cpp">
+    <ClCompile Include="Vector_02.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
