--- a/Vector_02/Vector_02.vcxproj
+++ b/Vector_02/Vector_02.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f7f06532-e07b-4a03-8ffb-067e628e9e92}</ProjectGuid>
-    <RootNamespace>ContainersPractice</RootNamespace>
+    <ProjectGuid>{ca479c90-cdb3-4ab5-b4f0-f10efb62ca8d}</ProjectGuid>
+    <RootNamespace>Vector02</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Lambda_01</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lambda_01.cpp" />
+    <ClCompile Include="Vector_02.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
